--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<div id="grid"></div>
 	
-	<script src="js/vendor/jquery.js"></script>
+	<script src="js/vendor/jquery-1.8.0.min.js"></script>
 	<script src="js/vendor/jquery-ui-1.8.20.custom.min.js"></script>
 	<script src="js/jqPivot.js"></script>
 	<script src="js/mockupdata.js"></script>
